Removed train/test split

--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Split the data into training and testing data randomly. We will use 30,000 samples for our training data and the remaining 9,644 samples for our testing data"
+    "Split the data into training and testing data randomly. We will use 30,000 samples for our training data and the remaining 9,644 samples for our testing data. This part is not necessary yet, so comment it out for now"
    ]
   },
   {
@@ -144,15 +144,15 @@
     }
    ],
    "source": [
-    "# Shuffle  dataset\n",
-    "df_shuffled = df_cleaned.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "# # Shuffle  dataset\n",
+    "# df_shuffled = df_cleaned.sample(frac=1, random_state=42).reset_index(drop=True)\n",
     "\n",
-    "# Split into training and testing\n",
-    "train_df = df_shuffled.iloc[:30000]\n",
-    "test_df = df_shuffled.iloc[30000:39644]\n",
+    "# # Split into training and testing\n",
+    "# train_df = df_shuffled.iloc[:30000]\n",
+    "# test_df = df_shuffled.iloc[30000:39644]\n",
     "\n",
-    "print(f\"Training set shape: {train_df.shape}\")\n",
-    "print(f\"Testing set shape: {test_df.shape}\")"
+    "# print(f\"Training set shape: {train_df.shape}\")\n",
+    "# print(f\"Testing set shape: {test_df.shape}\")"
    ]
   }
  ],
